add model, user input and result view

--- a/NumbersToWords/Views/Home/Index.cshtml
+++ b/NumbersToWords/Views/Home/Index.cshtml
@@ -1,6 +1,11 @@
+
 @{
   Layout = "_Layout";
 }
 
-<h2>Index Stuff Goes Here</h2>
-<h3>@Model</h3>
+<form action="/" method="post">
+  <label>Enter Number</label>
+  <input type="number" name="number" value="">
+
+  <button type="submit" name="btn">Submit</button>
+</form>
